# FlexAI

./: README.md  pyproject.toml
flexai/: __init__.py  callbacks.py  core.py  mangers.py  modules.py
flexai/vision/: utils.py
